--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-check-box": "^2.1.7",
-    "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.18.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
