--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^6.1.1",
     "@mui/styled-engine-sc": "^6.1.1",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
@@ -37,6 +38,7 @@
     "react-native": "0.74.5",
     "react-native-check-box": "^2.1.7",
     "react-native-geocoding": "^0.5.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.18.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
@@ -44,6 +46,7 @@
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
+    "socket.io-client": "^4.8.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
