--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-check-box": "^2.1.7",
+    "react-native-elements": "^3.4.3",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-google-places-autocomplete": "^2.5.6",
