--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "geolib": "^3.3.4",
+    "haversine": "^1.1.1",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -41,6 +42,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.20.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.18.0",
     "react-native-paper": "^5.12.5",
